--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Anular.cshtml
@@ -41,8 +41,8 @@
         </div>
     </div>
 
-    
-        
+
+
 
     <div class="row">
         <div class="col-md-12">
@@ -55,7 +55,17 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="ru_tipo">Grupo*</label>
+                    @Html.DropDownListFor(q => q.rub_grupo, new SelectList(ViewBag.lst_grupo, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.rub_grupo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -141,7 +151,7 @@
             </div>
         </div>
     </div>
-   
+
     <div class="row">
         <div class="col-md-12">
             <div class="form-group">
