--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Nuevo.cshtml
@@ -44,9 +44,6 @@
         </div>
     </div>
 
-    
-   
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -54,6 +51,18 @@
                     <label for="ru_tipo">Tipo rubro*</label>
                     @Html.DropDownListFor(q => q.ru_tipo, new SelectList(ViewBag.lst_tipo_rubro, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.ru_tipo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="ru_tipo">Grupo*</label>
+                    @Html.DropDownListFor(q => q.rub_grupo, new SelectList(ViewBag.lst_grupo, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.rub_grupo, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -144,7 +153,7 @@
             </div>
         </div>
     </div>
-   
+
     <div class="row">
         <div class="col-md-12">
             <div class="form-group">
