--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rubro/Modificar.cshtml
@@ -42,8 +42,8 @@
         </div>
     </div>
 
-  
-    
+
+
 
     <div class="row">
         <div class="col-md-12">
@@ -56,7 +56,17 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="ru_tipo">Grupo*</label>
+                    @Html.DropDownListFor(q => q.rub_grupo, new SelectList(ViewBag.lst_grupo, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.rub_grupo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -142,7 +152,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="row">
         <div class="col-md-12">
             <div class="form-group">
