--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
@@ -33,7 +33,7 @@
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
                 if (data.length > 0) {
-                    alert("Solicitud de autorización enviada exitósamente, por favor espere a que sea procesada por el SRI para que pueda ser impresa");
+                    alert("Solicitud de autorización enviada exitósamente, por favor espere a que sea procesada por el SRI para imprimir el RIDE");
                 }
             },
             error: function (error) {
