--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura.cshtml
@@ -57,7 +57,7 @@
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
-            if ((e.GetValue("esta_impresa") == null ? false : Convert.ToBoolean(e.GetValue("esta_impresa"))) == true && Convert.ToString(e.GetValue("Estado")) == "A")
+            if (!string.IsNullOrEmpty(Convert.ToString(e.GetValue("vt_autorizacion"))) && Convert.ToString(e.GetValue("Estado")) == "A")
             {
                 e.Row.ForeColor = System.Drawing.Color.Blue;
             }
@@ -67,7 +67,7 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if ((DataBinder.Eval(tc.DataItem, "Estado") == null ? false : Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "esta_impresa"))) != true && Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
+                if (string.IsNullOrEmpty(Convert.ToString(DataBinder.Eval(tc.DataItem, "vt_autorizacion"))) && Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
                     Html.ActionLink("Modificar", "Modificar", new  { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(tc.DataItem, "IdCbteVta") }) + "&nbsp;" +
@@ -75,7 +75,7 @@
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
                 }else
-                     if ((DataBinder.Eval(tc.DataItem, "Estado") == null ? false : Convert.ToBoolean(DataBinder.Eval(tc.DataItem, "esta_impresa"))) == true && Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
+                     if (!string.IsNullOrEmpty(Convert.ToString(DataBinder.Eval(tc.DataItem, "vt_autorizacion"))) && Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
                         Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(tc.DataItem, "IdCbteVta") },
@@ -145,7 +145,7 @@
 
         settings.Columns.Add(column =>
         {
-            column.Caption = "*";
+            column.Caption = "Módulo";
             column.SetDataItemTemplateContent(c =>
             {
                 ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("FAC_013", "FacturacionReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(c.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(c.DataItem, "IdCbteVta") }, Request.Url.Scheme) + "');\"></span>");
@@ -156,7 +156,7 @@
 
         settings.Columns.Add(column =>
         {
-            column.Caption = "Módulo";
+            column.Caption = "RIDE";
             column.SetDataItemTemplateContent(c =>
             {
                 ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("FAC_007", "FacturacionReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(c.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(c.DataItem, "IdCbteVta") }, Request.Url.Scheme) + "');\"></span>");
@@ -166,7 +166,7 @@
 
         settings.Columns.Add(column =>
         {
-            column.Caption = "Pre-impreso";
+            column.Caption = "PreImpreso";
             column.SetDataItemTemplateContent(c =>
             {
                 ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("FAC_003", "FacturacionReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(c.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(c.DataItem, "IdCbteVta") }, Request.Url.Scheme) + "');\"></span>");
