--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/_CmbDivision_reportes.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/_CmbDivision_reportes.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "RRHHReportes", Action = "_CmbDivisin_reportes", Area = "Reportes" };
+        settings.CallbackRouteValues = new { Controller = "RRHHReportes", Action = "CmbDivision_reportes", Area = "Reportes" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "Descripcion";
