--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_021.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_021.cshtml
@@ -42,14 +42,14 @@
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="IdRubro">Division</label>
-                            @Html.Partial("_CmbDivision_reportes", Model)
+                            @Html.Partial("_CmbDivision_reportes", Model.IdDivision)
                             @Html.ValidationMessageFor(q => q.IdDivision, "", new { @class = "text-danger" })
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
                             <label for="IdRubro">Area</label>
-                            @Html.Partial("_CmbArea_roles", Model)
+                            @Html.Partial("_CmbArea_reportes",Model.IdArea)
                             @Html.ValidationMessageFor(q => q.IdArea, "", new { @class = "text-danger" })
                         </div>
                     </div>
