--- a/ERP/Core.Erp.Web/Areas/Migraciones/Views/FacturasEventos/_GridViewPartial_facturas_eventos.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Migraciones/Views/FacturasEventos/_GridViewPartial_facturas_eventos.cshtml
@@ -2,10 +2,10 @@
 
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridViewPartial_documentos_pendientes_enviar_sri";
-        settings.CallbackRouteValues = new { Controller = "ComprobantesSinAutorizacion", Action = "GridViewPartial_documentos_pendientes_enviar_sri", Fecha_ini = ViewBag.Fecha_ini, Fecha_fin = ViewBag.Fecha_fin, IdEmpresa = ViewBag.IdEmpresa, IdSucursal = ViewBag.IdSucursal};
+        settings.Name = "GridViewPartial_facturas_eventos";
+        settings.CallbackRouteValues = new { Controller = "FacturasEventos", Action = "GridViewPartial_facturas_eventos", Fecha_ini = ViewBag.Fecha_ini, Fecha_fin = ViewBag.Fecha_fin};
         settings.Width = Unit.Percentage(100);
-        settings.KeyFieldName = "secuencia";
+        settings.KeyFieldName = "cod_fact";
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -45,12 +45,14 @@
             column.Visible = false;
         });
 
+        settings.Columns.Add("cod_evento", "Codigo evento").Width = Unit.Percentage(5);
+        settings.Columns.Add("cod_fact", "Codigo fac.").Width = Unit.Percentage(5);
+        settings.Columns.Add("apellidos", "Apellidos").Width = Unit.Percentage(20);
+        settings.Columns.Add("nombres", "Nombres").Width = Unit.Percentage(20);
 
-        settings.Columns.Add("Tipo_documento", "Tipo").Width = Unit.Percentage(10);
-        settings.Columns.Add("Documento", "Documento").Width = Unit.Percentage(15);
         settings.Columns.Add(column =>
         {
-            column.FieldName = "vt_fecha";
+            column.FieldName = "fecha";
             column.Caption = "Fecha";
             column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "d";
@@ -60,8 +62,11 @@
                 sp.Width = Unit.Percentage(100);
             });
         });
-        settings.Columns.Add("pe_nombreCompleto", "Beneficiario").Width = Unit.Percentage(30);
-        settings.Columns.Add("vt_Observacion", "Observación").Width = Unit.Percentage(30);
+        settings.Columns.Add("v_unit", "P.Unitario").Width = Unit.Percentage(8);
+        settings.Columns.Add("subtotal", "Subtotal").Width = Unit.Percentage(8);
+        settings.Columns.Add("v_iva", "Iva").Width = Unit.Percentage(8);
+        settings.Columns.Add("total", "Total").Width = Unit.Percentage(8);
+
 
         settings.ClientSideEvents.SelectionChanged = "OnSelectionChanged";
         settings.ClientSideEvents.BeginCallback = "OnBeginCallback";
