--- a/ERP/Core.Erp.Web/Areas/Migraciones/Views/FacturasEventos/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Migraciones/Views/FacturasEventos/Index.cshtml
@@ -16,7 +16,7 @@
         e.customArgs["selectedIDs"] = selectedIDs;
     }
     function OnSelectionChanged(s, e) {
-        s.GetSelectedFieldValues("secuencia", GetSelectedFieldValuesCallback);
+        s.GetSelectedFieldValues("cod_fact", GetSelectedFieldValuesCallback);
     }
     function GetSelectedFieldValuesCallback(values) {
         //Capture all selected keys
@@ -26,7 +26,7 @@
    
 
 </script>
-@using (Html.BeginForm("Index", "ComprobantesSinAutorizacion",FormMethod.Post,new { @role = "form", @id = "myform" }))
+@using (Html.BeginForm("Index", "FacturasEventos",FormMethod.Post,new { @role = "form", @id = "myform" }))
 {
     @Html.HiddenFor(q=> q.IdEmpresa)
     <div class="box">
@@ -48,14 +48,7 @@
         </div>
         <div class="box-body">
             <div class="row">
-                <div class="col-md-12">                 
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            <label for="IdSucursal">Sucursal*</label>
-                            @Html.DropDownListFor(q=> q.IdSucursal, new SelectList(ViewBag.lst_sucursal,"IdSucursal","Su_Descripcion"),new { @id = "IdSucursal", @class = "form-control"})
-                            @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
+                <div class="col-md-12">                
                     <div class="col-md-2">
                         <div class="form-group">
                             <label for="">Fecha inicio*</label>
@@ -115,7 +108,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_documentos_pendientes_enviar_sri", new {Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_facturas_eventos", new {Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin })
         </div>
        
         <!-- /.box-body -->
@@ -141,7 +134,7 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("guardar_aprobacion", "ComprobantesSinAutorizacion", new { Area = "General" })',
+            url: '@Url.Action("guardar_aprobacion", "FacturasEventos", new { Area = "Migraciones" })',
             async: false,
             bDeferRender: true,
             bProcessing: true,
