--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/MotivoLiquidacion/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/MotivoLiquidacion/Anular.cshtml
@@ -24,9 +24,44 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="ESRetenFTE"></label>
+                    @Html.DevExpress().CheckBoxFor(q => q.ESRetenFTE, settings =>
+                           {
+                               settings.Name = "ESRetenFTE";
+                               settings.Text = "Es retención a la FTE";
+
+                           }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.ESRetenFTE, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="ESRetenIVA"></label>
+                    @Html.DevExpress().CheckBoxFor(q => q.ESRetenIVA, settings =>
+                           {
+                               settings.Name = "ESRetenIVA";
+                               settings.Text = "Es retención al IVA";
+
+                           }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.ESRetenIVA, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="Descripcion">Porcentaje</label>
+                    @Html.TextBoxFor(q => q.Porcentaje, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.Porcentaje, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-danger">Anular</button>
         <a class="btn btn-default" href="@Url.Action("Index","MotivoLiquidacion",new { Area = "CuentasPorCobrar" },null)">Cancelar</a>
     </div>
 
